Added JWT functionality.

--- a/Northwind.Api/appsettings.json
+++ b/Northwind.Api/appsettings.json
@@ -8,6 +8,11 @@
   "ConnectionStrings": {
     "NorthwindConnection": "Server=localhost;Database=Northwind;Trusted_Connection=True;TrustServerCertificate=rue;MultipleActiveResultSets=true;Command Timeout=180"
   },
+  "Jwt": {
+    "Key": "63E7Rc9enKMFtiVQ2tV7xVMhJeTdRqDp",
+    "Issuer": "NorthwindAPI",
+    "Audience": "NorthwindClients"
+  },
   "AllowedHosts": "*"
 }
 
